src/components/articles/ArticleInlineList.scss
@import "/src/styles/extend.scss";

$spacing-between-items: 15px;
$item-padding: 5px;

ul.article-inline-list-items {
    list-style: none;
    padding: 0;
    margin: 0;
    text-align: center;
}

li.article-inline-list-item {
    margin-right: calc($spacing-between-items - 10px);
    white-space: nowrap;
    display: inline-flex;

    @include media-breakpoint-down(sm) {
        margin-right: calc($spacing-between-items - 12px);
    }

    &:not(:last-child)::after {
        content: "•";
        color: var(--theme-muted);
        margin-left: $spacing-between-items;
        margin-top: 4px;
        @include media-breakpoint-down(md) {
            margin-top: 5px;
        }
        @include media-breakpoint-down(sm) {
            margin-left: calc($spacing-between-items - 5px);
        }
    }
}

i.article-inline-list-item-icon {
    padding: $item-padding $item-padding;
    margin: 0 $item-padding;
    border-radius: 100%;
    opacity: 0.75;

    display: inline-flex;
    align-items: center;
    justify-content: center;

    width: 28px;
    height: 28px;
    @include media-breakpoint-down(sm) {
        margin: 0 calc($item-padding - 3px)
    }
}

ul.article-inline-list-items-column-mode {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    li.article-inline-list-item {
        margin-right: 0;
        height: 25px;

        &:not(:last-child)::after {
            display: none;
        }
    }

    i.article-inline-list-item-icon {
        margin-left: 0;
    }
}

